<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#f3767c69">

        <TextView android:text="@string/calculator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/header_size"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6"
        android:background="#de2c340f">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/inputEditText"
                android:gravity="bottom"
                android:background="@color/white"
                android:maxLength="7"
                android:textSize="65dp"
                android:text="0"
                android:layout_gravity="fill_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5"
            android:background="@color/black_shade">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn9"
                        android:text="@string/calc_nine"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn8"
                        android:text="@string/calc_eight"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn7"
                        android:text="@string/calc_seven"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn6"
                        android:text="@string/Calc_six"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn5"
                        android:text="@string/Calc_five"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn4"
                        android:text="@string/calc_four"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn3"
                        android:text="@string/calc_three"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn2"
                        android:text="@string/calc_two"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn1"
                        android:text="@string/calc_one"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btn0"
                        android:text="@string/calc_zero"
                        android:layout_weight="2"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/calc_btnBack"
                        android:text="@string/calc_op_back"
                        android:layout_weight="1"
                        android:background="@color/purple_dark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btnText_size" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3"
                android:background="@color/purple_dark">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/calc_btnAdd"
                    android:text="@string/calc_op_plus"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btnText_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/calc_btnSub"
                    android:text="@string/calc_op_sub"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btnText_size" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/calc_btnEql"
                    android:text="@string/calc_op_eql"
                    android:layout_weight="2"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btnText_size" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>